# Hogak_Stitching

./: .gitignore  AGENTS.md  README.md  __main__.py  requirements.txt
config/: README.md  runtime.json
config/profiles/: camera25.json  dev.json  prod.json
data/: runtime_homography.json
docs/: gpu_only_cleanup_ledger.md  operator_acceptance.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: CalibrationImage.tsx  CalibrationStepper.tsx  MetricCard.tsx  PageHeader.tsx  Shell.tsx
frontend/src/lib/: api.ts  display.ts  projectPhase.ts  routes.ts  useCalibrationState.ts  useProjectState.ts  useRuntimeFeed.ts
frontend/src/pages/: ArtifactsPage.tsx  CalibrationAssistedPage.tsx  CalibrationReviewPage.tsx  CalibrationStartPage.tsx  CalibrationStitchReviewPage.tsx  DashboardPage.tsx  GeometryComparePage.tsx  OutputsPage.tsx  ProjectPage.tsx  ValidationPage.tsx
native_runtime/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.example.json  README.md  bootstrap_native_runtime.ps1  toolchain_versions.json
native_runtime/include/engine/: engine.h  engine_config.h  engine_metrics.h  geometry_loader.h  input_pipeline.h  metrics_pipeline.h  output_pipeline.h  pair_scheduler.h  stitch_engine.h
native_runtime/src/app/: capture_main.cpp  operator_main.cpp  runtime_main.cpp
native_runtime/src/control/: control_server.cpp  control_server.h  json_line_protocol.h  json_parser.h
native_runtime/src/engine/: engine.cpp  engine_execution.cpp  geometry_loader.cpp  input_pipeline.cpp  metrics_pipeline.cpp  output_pipeline.cpp  pair_scheduler.cpp  stitch_engine.cpp
native_runtime/src/input/: ffmpeg_rtsp_reader.cpp  ffmpeg_rtsp_reader.h
native_runtime/src/output/: ffmpeg_output_writer.cpp  ffmpeg_output_writer.h  gpu_direct_build_config.h.in  gpu_direct_output_writer.cpp  gpu_direct_output_writer.h  gpu_direct_support.cpp  gpu_direct_support.h  output_writer.h  output_writer_factory.cpp  output_writer_factory.h
native_runtime/src/platform/: win_process_pipe.cpp  win_process_pipe.h  win_process_sink.cpp  win_process_sink.h
reports/: 01_project_overview_and_architecture.md  01_런타임_구조_전환.md  02_calibration_and_matching_strategy.md  02_스티칭_알고리즘_정책.md  03_current_status_and_roadmap.md  03_native_runtime_current_status.md  03_개발_로그.md  04_native_runtime_skeleton.md  04_next_steps_and_release_plan.md  05_60fps_service_pipeline_plan.md  05_native_runtime_progress_and_finish_plan.md  06_deployment_and_support_guide.md  07_new_hire_handoff_study_guide.md  08_runtime_architecture_diagrams.md  09_baseline_acceptance_and_source_timing.md  10_end_to_end_redesign_spec.md  11_runtime_contract_and_supervisor_spec.md  12_geometry_cylindrical_spec.md  13_validation_rollout_and_acceptance_spec.md  14_virtual_center_rectilinear_spec.md  15_current_fixup_design.md  README.md  a1_engine_contract_2026-03-06.md  devlog_2026-03-06_gpu_desktop_and_ffmpeg_transition_prep.md  ffmpeg_runtime_transition_plan_2026-03-06.md  gpu_direct_encode_dependency_options_2026-03-13.md  pair01_pair02_stitching_report.md  pair01_pair02_스티칭_보고서.md  progress_since_999d3b1.md  python_runtime_to_native_engine_decision_log_2026-03-06.md  stitching_algorithm_policy_notes_2026-03-06.md  vlc_tcp_udp_preview_difference_2026-03-13.md  개발로그_날짜별.md  기획서_대비_타당성_검증_보고서_2026-02-26.md
reports/adr/: ADR-001-runtime-schema-v2.md  ADR-002-prepare-run-validate-boundary.md  ADR-003-cylindrical-baseline.md  ADR-004-native-transmit-and-reproducible-build.md  ADR-005-virtual-center-rectilinear-bakeoff.md
reports/archive/: README.md  a_runtime_split_design_2026-03-06.md  final_stream_observer_architecture_2026-03-09.md  runtime_control_and_viewer_design_2026-03-09.md
scripts/: README.md  build_native_runtime_release.cmd  check_gpu_direct_dependencies.py  clean_generated_artifacts.cmd  compare_pair_modes.py  compare_vlc_ffplay_sample.py  diagnose_dual_udp_streams.py  diagnose_transmit_freeze.py  diagnose_vlc_transmit.py  list_runtime_processes.ps1  list_runtime_processes.py  native_runtime_probe.py  native_runtime_soak.py  open_vlc_low_latency.cmd  probe_opencv_cudacodec.py  run_native_calibrate.cmd  run_native_runtime.cmd  run_native_runtime_common.cmd  run_native_runtime_realtime.cmd  run_native_runtime_soak.cmd  run_native_runtime_strict.cmd  setup_cuda_opencv.ps1  setup_ffmpeg_dev.py  setup_ffmpeg_portable.ps1  smoke_gpu_direct_output.py  validation_support.py  verify_ffplay_viewer.py  verify_output_viewer.py  verify_runtime_scale.py  verify_runtime_udp_output.py  verify_udp_output_color.py
stitching/: __init__.py  __main__.py  cli.py  deep_feature_matching.py  desktop_app.py  distortion_calibration.py  errors.py  ffmpeg_reader.py  ffmpeg_runtime.py  ffmpeg_writer.py  final_stream_viewer.py  gui_app.py  image_stitching.py  job_service.py  legacy_commands.py  live_stitching.py  native_calibration.py  native_runtime_cli.py  native_runtime_validation.py  output_presets.py  perf_profiles.py  project_defaults.py  reporting.py  runtime_backend.py  runtime_calibration_service.py  runtime_client.py  runtime_contract.py  runtime_geometry_artifact.py  runtime_geometry_bakeoff.py  runtime_geometry_common.py  runtime_gradio_ui.py  runtime_launcher.py  runtime_site_config.py  runtime_supervisor.py  stitch_core.py  video_stitching.py
stitching/core/: __init__.py  blend.py  config.py  exposure.py  features.py  geometry.py
stitching/domain/: __init__.py
stitching/domain/calibration/: __init__.py
stitching/domain/geometry/: __init__.py  artifact.py  capture.py  common.py  compositor.py  models.py  policy.py  refresh_runner.py  refresh_service.py  render.py  selection.py  spec.py  virtual_center.py  workflow.py
stitching/domain/project/: __init__.py  actions.py  models.py  routes.py  state.py  status.py
stitching/domain/runtime/: __init__.py  (+6 more)
tests/: test_cli_surface.py  test_config_guidance.py  test_frontend_contract.py  test_mesh_refresh_config.py  test_project_api_surface.py  test_project_status.py
(+28 files in other folders)
